--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=5000
+spring.datasource.url=jdbc:mysql://localhost:3306/validation-db
+spring.datasource.username=admin
+spring.datasource.password=mySql@123
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.profiles.active=dev
+spring.application.name=validation-exceptions-service
