--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=admin
 spring.datasource.password=mySql@123
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.profiles.active=dev
-spring.application.name=validation-exceptions-service
+spring.application.name=user-service
