--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-server.port=5000
 spring.datasource.url=jdbc:mysql://localhost:3306/validation-db
-spring.datasource.username=admin
-spring.datasource.password=mySql@123
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.application.name=user-service
+spring.datasource.username=root
+spring.datasource.password=rootadmin
+spring.sql.init.platform=mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+server.port=8081
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-reading-dup-tree-key=true
